# EULER_SEQUENTIAL

./: .gitignore  README.md
1D/IDP_SMOOTH/: CMakeLists.txt
1D/IDP_SMOOTH/LOCAL_SOURCES/: condlim.f90  main.f90  main_SAVE.F90
1D/IDP_SMOOTH/REGRESSION_TESTS/: data_low_order  err_E  err_mt  err_rho  galerkin.sh  low.sh  mesh.FEM  mt_exact  reference_regression_test_galerkin  reference_regression_test_low_order
1D/IDP_SODT/: CMakeLists.txt
1D/IDP_SODT/LOCAL_SOURCES/: condlim.f90  main.f90
1D/IDP_SODT/REGRESSION_TESTS/: E_exact  err_E  err_mt  err_rho  high.sh  low.sh  mt_exact  reference_regression_test_high_order  reference_regression_test_low_order
1D/SSP_BLAST/: CMakeLists.txt
1D/SSP_BLAST/LOCAL_SOURCES/: condlim.f90  main.f90
1D/SSP_BLAST/REGRESSION_TESTS/: data_high_order  data_low_order  high.sh  low.sh  mesh.FEM  reference_regression_test_high_order  reference_regression_test_low_order
1D/SSP_BLAST/RUNS/: data
1D/SSP_LAX/: CMakeLists.txt
1D/SSP_LAX/LOCAL_SOURCES/: condlim.f90  main.f90
1D/SSP_LAX/REGRESSION_TESTS/: HR_pressure  err_E  err_mt  err_rho  high.sh  low.sh  mt_exact  reference_regression_test_high_order  rho_exact
1D/SSP_LEBLANC/: CMakeLists.txt
1D/SSP_LEBLANC/LOCAL_SOURCES/: condlim.f90  main.f90
1D/SSP_LEBLANC/REGRESSION_TESTS/: E_exact  current_regression_test  data_high_order  data_low_order  err_E  err_mt  err_rho  fort.10  high.sh  low.sh  mt_exact  reference_regression_test_high_order  reference_regression_test_low_order  rho_exact
1D/SSP_LEBLANC/RUNS/: E_exact  HR_pressure  data  err_E  err_mt  err_rho  mesh.FEM  mt_exact  rho_exact
1D/SSP_REDLICH_KWONG/: CMakeLists.txt
1D/SSP_REDLICH_KWONG/LOCAL_SOURCES/: condlim.f90  main.f90  rkwd.f90
1D/SSP_REDLICH_KWONG/REGRESSION_TESTS/: data_case1_low_order  data_case2_low_order  low_case1.sh  low_case2.sh  mesh.FEM  reference_regression_test_case2_low_order  reference_regression_test_high_order  reference_regression_test_low_order
1D/SSP_SMOOTH/: CMakeLists.txt
1D/SSP_SMOOTH/LOCAL_SOURCES/: condlim.f90  main.f90
1D/SSP_SODT/: CMakeLists.txt
1D/SSP_SODT/LOCAL_SOURCES/: condlim.f90  main.f90
1D/SSP_SODT/REGRESSION_TESTS/: E_exact  HR_pressure  data  data_low_order  err_E  err_mt  err_rho  high.sh  low.sh  mt_exact  reference_regression_test_high_order  reference_regression_test_low_order  rho_exact
1D/SSP_SODT/RUNS/: E_exact  HR_pressure  data  err_E  err_mt  err_rho  mesh.FEM  mt_exact  rho_exact
1D/SSP_VANDERWALLS/: CMakeLists.txt
1D/SSP_VANDERWALLS/LOCAL_SOURCES/: condlim.f90  main.f90
1D/SSP_VANDERWALLS/REGRESSION_TESTS/: data_low_order_case1  data_low_order_case3  dummy  err_E  err_mt  low.sh  low0.sh  low1.sh  low2.sh  low3.sh  mesh_case3.FEM  reference_regression_test_low_order_case1  reference_regression_test_low_order_case2
1D/Z_OLD_TESTS_FROM_QUARCKS/BACKUP/: condlim.f90  main.f90
2D/IDP_WIND_TUNNEL_REG/: CMakeLists.txt
2D/IDP_WIND_TUNNEL_REG/LOCAL_SOURCES/: condlim.f90  main.f90
2D/IDP_WIND_TUNNEL_REG/MESHES/: data_colle  geometry.step_regul  step_regul.in  topology.step_regul
2D/IDP_WIND_TUNNEL_REG/REGRESSION_TESTS/: data  data_high_order  data_low_order  high.sh  high_no_limiting.sh  low.sh  reference_regression_test_high_order  reference_regression_test_high_order_no_limiting  reference_regression_test_low_order
2D/IDP_WIND_TUNNEL_REG/RUNS/FINE/: data  lis
2D/IDP_WIND_TUNNEL_REG/RUNS/LOW_ORDER_COARSE/: current_regression_test  data  reference_regression_test_low_order
2D/IDP_WIND_TUNNEL_REG/RUNS/LOW_ORDER_FINE/: Mesh_1_FE_1  data
2D/IDP_WIND_TUNNEL_REG/RUNS/REGRESSION_TEST/: data  data_high_order  high.sh  low.sh  reference_regression_test_low_order
2D/SSP_CTENAUD_VDARU_SCHKTB/: CMakeLists.txt
2D/SSP_CTENAUD_VDARU_SCHKTB/LOCAL_SOURCES/: condlim.f90  main.f90
2D/SSP_CTENAUD_VDARU_SCHKTB/MESHES/: ct_vd_1.FEM  geometry.unit_sq  gridplot.unit_sq  topology.unit_sq  unit_sq.in
2D/SSP_CTENAUD_VDARU_SCHKTB/REGRESSION_TESTS/: Mesh_1_FE_1  data_high_order  data_low_order  fort.30  fort.40  high.sh  low.sh  reference_regression_test  reference_regression_test_high_order  reference_regression_test_low_order
2D/SSP_CTENAUD_VDARU_SCHKTB/RUNS/: data
2D/SSP_DBLMACH/: CMakeLists.txt
2D/SSP_DBLMACH/LOCAL_SOURCES/: main.f90
2D/SSP_DBLMACH/REGRESSION_TESTS/: Mesh_1_FE_1  data_high_order  data_low_order  high.sh  low.sh  reference_regression_test_high_order  reference_regression_test_low_order
2D/SSP_ISENTROPIC_VORTEX/: CMakeLists.txt
2D/SSP_ISENTROPIC_VORTEX/LOCAL_SOURCES/: main.f90
2D/SSP_ISENTROPIC_VORTEX/MESHES/: FEM.cav  LOS_0.1.FEM  LOS_0.2.FEM  LOS_0.4.FEM  VORTEX_0.1.FEM  VORTEX_0.2.FEM  VORTEX_0.4.FEM  backgrid.circle  cav.in  cav1.in  cav2.in  cavcurved.in  circle.in  circle_0.1.FEM  circle_0.2.FEM  circle_0.4.FEM  data_colle  dataplot.ps  geometry.cav  geometry.cav1  geometry.cav2  geometry.ccircle  geometry.circle  geometry.unit_sq  knots.unit_squar  topology.cav  topology.cav1  topology.circle  topology.unit_sq  unit_sq.in  unit_sq_0.0307.FEM
2D/SSP_ISENTROPIC_VORTEX/REGRESSION_TESTS/: Mesh_1_FE_1  data_high_order  (+7 more)
2D/SSP_OAT15A/: CMakeLists.txt
2D/SSP_POINSOT_TEST/: CMakeLists.txt
2D/SSP_WIND_TUNNEL_REG/: CMakeLists.txt
COMPIL_1D/: condlim.f90  main.f90  main_vdw.f90  test.f90  vdw.f90
COMPIL_1D/SHOCKTUBE/: ideal_polytropic_gas.f90  shock_tube_profiles_i.f90  sol_exa_stub.f90
COMPIL_2D/: condlim.f90  main.f90
EULER_POISSON/COMPIL_1D/: condlim.f90  main.f90
EULER_POISSON/EULER_POISSON_SOURCES/: euler_poisson_time_stepping.f90  update_euler_poisson.f90
REGRESSION_TEST_DIR/: CMakeLists.txt
SOURCES/COMMON_SOURCES/: arbitrary_eos.f90  euler_bc_arrays.f90  limiting_SAVE.F90  linear_algebra_tools.f90  mesh.f90  post_proc.f90  regression_test.f90  riemann.f90
SOURCES/IDP_EULER/: IDP_euler_bdy_cdn.f90  IDP_limiting_euler.f90  IDP_read_data.f90  IDP_update_euler.f90
SOURCES/SHOCKTUBE/: exact_Riemann_solver_i.f90  grid_1d.f90  ideal_polytropic_gas.f90  shock_tube_profiles_i.f90  sol_exa_stub.f90
SOURCES/SSP_EULER/: euler_bdy_cdn.f90  euler_start.f90  limiting_euler.f90  read_data.f90  update_euler.f90
(+208 files in other folders)
